# philo

./: CMakeLists.txt  Makefile  main.c  master.c  philo  sand.c
headers/: philo.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstsize.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  libft.h
philo/: Makefile  main.c
philo/headers/: philo.h
philo/srcs/: breadcrumbs.c  care_free_f.c  carefree_life.c  init.c  srcs.c  supervisor.c
srcs/: ft_atoi.c  ft_isdigit.c  ft_putnbr_fd.c  ft_putstr_fd.c  srcs.c
srcs/parser/: parser.c
